sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var v : Int;
            ^AlgInsertionSort:6: error: not found: value j
		j = i-1;
                ^AlgInsertionSort:7: error: not found: value j
		while(getValeur(j)>v){
                                ^AlgInsertionSort:8: error: not found: value j
			if(j>0){
                           ^AlgInsertionSort:9: error: not found: value j
				j -= 1
                                ^AlgInsertionSort:12: error: not found: value j
		for(k<-j until i){
                       ^