sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var v : Int;
	for(i<-1 until getNombreValeurs()){
		v = getValeur(i);
		j = i-1;
		while(getValeur(j)>v){
			if(j>0){
				j -= 1
			}
		}
		for(k<-j until i){
			echange(v,j);
		}
	}
}
